# Fuzzy

./: .gitignore  CMakeLists.txt  README.md
header/core/: binaryexpression.hpp  binaryexpressionmodel.hpp  expression.hpp  expressionFactory.hpp  hello.py  naryexpression.hpp  naryexpressionmodel.hpp  unaryexpression.hpp  unaryexpressionmodel.hpp  valuemodel.hpp
header/evolution/: binaryshadowexpression.hpp  naryshadowexpression.hpp  unaryshadowexpression.hpp
header/exceptions/: nullpointerexception.hpp  standarddeviationexception.hpp  trapezoidalexception.hpp  triangleexception.hpp
header/fuzzy/: And.hpp  AndMin.hpp  agg.hpp  aggmax.hpp  aggplus.hpp  andmin.hpp  andmult.hpp  cogdefuzz.hpp  equal.hpp  fuzzyFactory.hpp  is.hpp  isTriangle.hpp  isgaussian.hpp  issigmoid.hpp  istrapezoidal.hpp  istrapezoidalleft.hpp  istrapezoidalright.hpp  istriangle.hpp  mamdanidefuzz.hpp  naryexpression.hpp  naryexpressionmodel.hpp  naryope.hpp  not.hpp  notminus.hpp  notminus1.hpp  or.hpp  ormax.hpp  orplus.hpp  shape.hpp  sugenoconclusion.hpp  sugenodefuzz.hpp  sugenothen.hpp  then.hpp  thenmax.hpp  thenmin.hpp  thenmult.hpp
src/: main.cpp  utils.h
